# chat_app_rust

./: Cargo.toml  README.md
src/: client.rs  main.rs
src/cli/: mod.rs
src/node/: mod.rs  node.rs  node_manager.rs
src/serialization/: mod.rs
tests/: node_test.rs
