[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = "0.5.0-rc.1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
aes = "0.7"
rand = "0.8"
futures = "0.3"
rsa = "0.5.0"

[package.metadata]

